# mamolinux-plymouth

./: Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  index.html
build-tools/: ltmain.sh
debian/: changelog  control  libplymouth-dev.install  libplymouth2.apport  libplymouth2.install  libplymouth2.symbols  libplymouth4.install  libplymouth4.symbols  libplymouth5.symbols  plymouth-label.install  plymouth-theme-fade-in.install  plymouth-theme-glow.install  plymouth-theme-kubuntu-text.install  plymouth-theme-kubuntu-text.postinst  plymouth-theme-kubuntu-text.postrm  plymouth-theme-mamolinux-logo.install  plymouth-theme-mamolinux-logo.postinst  plymouth-theme-mamolinux-logo.prerm  plymouth-theme-mamolinux-text.install  plymouth-theme-mamolinux-text.postinst  plymouth-theme-mamolinux-text.prerm  plymouth-theme-solar.install  plymouth-theme-spinfinity.install  plymouth-theme-spinner.postinst  plymouth-theme-text.install  plymouth-theme-ubuntu-logo.postinst  plymouth-theme-ubuntu-logo.prerm  plymouth-theme-ubuntu-text.install  plymouth-theme-ubuntu-text.postinst  plymouth-themes.install  plymouth-themes.postinst  plymouth-x11.install  plymouth-x11.postinst  plymouth-x11.postrm  plymouth.README.Debian  plymouth.install  plymouth.install.in  plymouth.links  plymouth.plymouth-log.upstart  plymouth.plymouth-splash.upstart  (+6 more)
debian/local/: plymouth.hook  plymouth.init-premount
debian/patches/: 0001-Bump-point-release-and-ABI-versions-of-libraries.patch  0001-script-Add-image-tile-support.patch  0003-default-theme.patch  0005-cmdline.patch  0007-label-freetype-fix-fallback-not-working-when-fc-matc.patch  0008-show-delay.patch  0009-renderer-support-reactivating-renderer-without-closi.patch  0010-main-Only-activate-renderers-if-the-splash-uses-pixe.patch  0011-drm-Remove-unnecessary-reset_scan_out_buffer_if_need.patch  0013-device-manager-don-t-watch-for-udev-events-when-deac.patch  0013-device-manager-don-t-watch-for-udev-events-when-deac_bionic.patch  0015-ply-device-manager-Handle-XKB-failing-to-load-more-g.patch  0016-ply-utils-Match-mutter-s-default-device-scale-choice.patch  0017-ply-utils-Only-choose-scale-2-when-the-perfect-scale.patch  Fix-missing-prototype-of-ply_get_timestamp.patch  Miscellaneous-fixes-for-compiler-warnings.patch  autoreconf.patch  avoid-sigpipe.patch  configure.ac-Avoid-embedding-the-date-in-the-version.patch  debian-changes  debian-changes-0.8.1-1  debian-changes-0.8.1-1ubuntu1  debian-changes-0.8.1-1ubuntu2  debian-changes-0.8.1-1ubuntu3  default-devicetimeout.patch  details-remove-separator.patch  details-update-status.patch  dont-bail-on-dummy-terms.patch  drm-Also-exclude-SimpleDRM-framebuffers-with-resolution-6.patch  fallback-etc-default-keyboard.patch  fix_unrefd_plugin_interface.patch  gcc45-arith-workaround.patch  git_assert_fix.patch  git_desactivate_renderer.patch  git_ensure_tty_closed_0a662723.patch  git_helper_renderer.patch  git_move_renderer_deactivate_778e0fb7.patch  git_screens_resolution.patch  git_set_translations.patch  git_small_bugfixes.patch  (+47 more)
debian/source/: include-binaries
docs/: Makefile.in
images/: Makefile.in
po/: LINGUAS  be.gmo  be.po  cs.gmo  cs.po  de.po  es.gmo  es.po  fr.po  fur.gmo  fur.po  hu.po  nl.po  pl.po  si.gmo  sr.po  uk.po  zh_CN.gmo  zh_CN.po
scripts/: Makefile.am  Makefile.in  plymouth-populate-initrd.in  plymouth-set-default-theme.in
src/: Makefile.am  Makefile.in  main.c  ply-boot-protocol.h  ply-boot-server.c  plymouth-1.pc.in  plymouthd.conf  plymouthd.defaults
src/client/: Makefile.am  Makefile.in  ply-boot-client.c  plymouth.c
src/client/tests/: Makefile.in
src/libply/: Makefile.in  (+5 more)
src/libply-splash-core/: Makefile.in  ply-boot-splash.c  ply-boot-splash.h  ply-device-manager.c  ply-device-manager.h  ply-keyboard.c  ply-pixel-buffer.c  ply-pixel-display.c  ply-pixel-display.h  ply-renderer-plugin.h  ply-renderer.c  ply-renderer.h  ply-seat.c  ply-terminal-emulator.c  ply-terminal.c  ply-terminal.h  ply-text-display.c  ply-text-progress-bar.c  ply-text-step-bar.c
src/libply-splash-graphics/: Makefile.in  ply-console-viewer.c  ply-label.c
src/plugins/controls/label-ft/: Makefile.am  Makefile.in  plugin.c
systemd-units/: Makefile.in  plymouth-halt.service.in  plymouth-kexec.service.in  plymouth-poweroff.service.in  plymouth-quit-wait.service.in  plymouth-quit.service.in  plymouth-read-write.service.in  plymouth-reboot.service.in  plymouth-start.service.in  systemd-ask-password-plymouth.service  systemd-ask-password-plymouth.service.in
themes/: Makefile.am  Makefile.in
themes/ubuntu-logo/: Makefile.am  Makefile.in  ubuntu-logo.grub  ubuntu-logo.script  ubuntu-logo.script.in
(+71 files in other folders)
